@@ -1,3 +1,9 @@
+2007-10-04  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/log.cc: not chaning data to locale, that gets inserted in XML
+    * jabberd/base/base_syslog.cc: converting to locale before sending message
+	to syslog
+
 2007-05-01  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/lib/xhash.cc: making the value type of xmppd::xhash generic
